[tool.poetry]
name = "speedtest-wf"
version = "0.1.0"
description = ""
authors = ["Patrick Rachford <prachford@icloud.com>"]
readme = "README.md"
packages = [{include = "speedtest_wf"}]

[tool.poetry.dependencies]
python = "^3.11"
speedtest-cli = "^2.1.3"
temporalio = "^1.1.0"
matplotlib = "^3.7.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
